# sand

./: .gitignore  ACCURATE_SYSTEM_STATUS.md  EDA_TOOL_INTEGRATION_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.md  FINAL_UPDATE_SUMMARY.md  GETTING_STARTED.md  GETTING_STARTED_ACCURATE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  OPEN_SOURCE_DATA_INTEGRATION.md  PHASE2_COMPLETION_REPORT.md  PRACTICAL_INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  README_IMPLEMENTATION.md  SAND_OPENROAD_INTEGRATION.md  SPRINT_TASKS.md  USER_GUIDE.md  WEEK1_COMPLETION_REPORT.md  authority_dashboard.py  autonomous_optimizer.py  browse.py  cause_effect_learning.py  complete_implementation.py  complete_pipeline_demo.py  comprehensive_learning_system.py  conclusion.md  debug_parser.py  demo_design.v  demonstration.py  enhanced_patterns.py  evaluation_results.json  expanded_rtl_parser.py  final_boss.v  grand_tapeout_demo.py  innovus_flow.tcl  main.py  (+37 more)
silicon-intelligence/: .gitignore  CMakeLists.txt  COMPREHENSIVE_PROJECT_SUMMARY.md  FINAL_COMPLETION_REPORT.md  FINAL_PROJECT_SUMMARY.md  LICENSE  PRODUCTION_DEPLOYMENT_PLAN.md  PROJECT_COMPLETION_CERTIFICATION.md  PROJECT_COMPLETION_SUMMARY.txt  README.md  SETUP_OPENROAD_DOCKER.md  STATUS_COMPLETED.txt  SYSTEM_OVERVIEW.md  SYSTEM_STATUS.md  advanced_ml_training.py  advanced_neural_network_training.py  authority_summary.json  authority_summary.py  autonomous_optimizer.py  benchmark_manifest.json  clustering_output.txt  clustering_output_final.txt  data_driven_authority.py  (+69 more)
(+197 files in other folders)
