[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-intelligence"
version = "0.1.0"
description = "Advanced AI-powered physical implementation system for IC design"
authors = [{name = "Silicon Intelligence Team", email = "team@silicon-intelligence.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "networkx>=2.8.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.1.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["silicon_intelligence*"]

[project.scripts]
silicon-intel = "silicon_intelligence.main:main"